--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "node-jsx": "^0.13.3",
     "react": "^0.14.7",
     "react-dom": "^0.14.5",
-    "react-tap-event-plugin": "^0.2.1"
+    "react-tap-event-plugin": "^0.2.1",
+    "twitter": "^1.2.5"
   },
   "devDependencies": {
     "gulp": "^3.9.0",
